# diffy

./: .clang-format  CMakeLists.txt
.github/workflows/: tests.yml
include/diffy/: Concepts.h  Dual.h  DualMath.h
tests/: DualMathTests.cpp  DualTests.cpp  main.cpp
